//
// Copyright 2024 DXOS.org
//

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

import "dxos/keys.proto";
import "dxos/edge/messenger.proto";

package dxos.mesh.signal;

message JoinRequest {
  string swarm_key = 1;
  dxos.edge.messenger.Peer peer = 2;
}

message LeaveRequest {
  string swarm_key = 1;
  dxos.edge.messenger.Peer peer = 2;
}

message QueryRequest {
  string swarm_key = 1;
}

message Message {
  dxos.edge.messenger.Peer author = 1;
  dxos.edge.messenger.Peer recipient = 2;
  google.protobuf.Any payload = 3;
}
